--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "~0.13.0-rc2",
     "bootstrap": "~3.3.2",
     "immutable": "~3.6.2",
-    "reflux": "~0.2.5"
+    "reflux": "~0.2.5",
+    "is_js": "~0.7.1"
   }
 }
