--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gulp-uglify": "~1.1.0",
     "gulp-if": "~1.2.5",
     "yargs": "~2.3.0",
-    "gulp-server-livereload": "~1.0.2",
     "jshint-stylish": "~1.0.0",
     "gulp-jshint": "~1.9.2",
     "gulp-babel": "~4.0.0",
@@ -30,7 +29,8 @@
     "lodash": "~3.3.1",
     "gulp-minify-css": "~0.5.1",
     "gulp-autoprefixer": "~2.1.0",
-    "gulp-less": "~3.0.1"
+    "gulp-less": "~3.0.1",
+    "gulp-webserver": "~0.9.0"
   },
   "dependencies": {
     "react": "~0.13.0-rc2",
