--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
@@ -37,6 +38,8 @@
     "bootstrap": "~3.3.2",
     "immutable": "~3.6.2",
     "reflux": "~0.2.5",
-    "is_js": "~0.7.1"
+    "is_js": "~0.7.1",
+    "request": "~2.53.0",
+    "express": "~4.12.2"
   }
 }
