--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reflux": "~0.2.5",
     "is_js": "~0.7.1",
     "request": "~2.53.0",
-    "express": "~4.12.2"
+    "express": "~4.12.2",
+    "whatwg-fetch": "~0.7.0"
   }
 }
