--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "is_js": "~0.7.1",
     "request": "~2.53.0",
     "express": "~4.12.2",
-    "whatwg-fetch": "~0.7.0"
+    "whatwg-fetch": "~0.7.0",
+    "compression": "~1.4.1"
   }
 }
