--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_size = 4
 
-[*.{js,json}]
+[*.{js,json,less}]
 indent_style = space
 indent_size = 2
 
