--- a/package.json
+++ b/package.json
@@ -13,39 +13,41 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "~3.8.11",
-    "vinyl-source-stream": "~1.0.0",
-    "browserify": "~8.1.3",
+    "babel": "^5.1.10",
+    "babelify": "^6.0.2",
+    "browserify": "^9.0.8",
+    "chai": "^2.2.0",
     "del": "~1.1.1",
-    "watchify": "~2.3.0",
-    "gulp-sourcemaps": "~1.3.0",
-    "gulp-util": "~3.0.3",
-    "vinyl-buffer": "~1.0.0",
-    "gulp-uglify": "~1.1.0",
-    "gulp-if": "~1.2.5",
-    "yargs": "~2.3.0",
-    "jshint-stylish": "~1.0.0",
-    "gulp-jshint": "~1.9.2",
-    "gulp-babel": "~4.0.0",
-    "babelify": "~5.0.3",
-    "babel": "~4.5.5",
-    "resolve": "~1.1.5",
-    "lodash": "~3.3.1",
-    "gulp-minify-css": "~0.5.1",
+    "gulp": "~3.8.11",
     "gulp-autoprefixer": "~2.1.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-if": "~1.2.5",
+    "gulp-jshint": "^1.10.0",
     "gulp-less": "~3.0.1",
-    "gulp-webserver": "~0.9.0"
+    "gulp-minify-css": "^1.0.0",
+    "gulp-mocha": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "~3.0.3",
+    "gulp-webserver": "~0.9.0",
+    "jshint-stylish": "~1.0.0",
+    "lodash": "^3.6.0",
+    "resolve": "~1.1.5",
+    "vinyl-buffer": "~1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.1",
+    "yargs": "^3.7.2"
   },
   "dependencies": {
     "bootstrap": "~3.3.2",
     "classnames": "^1.2.0",
     "compression": "~1.4.1",
     "express": "~4.12.2",
-    "immutable": "~3.6.2",
+    "immutable": "^3.7.2",
     "is_js": "~0.7.1",
     "react": "~0.13.0-rc2",
     "reflux": "~0.2.5",
-    "request": "~2.53.0",
+    "request": "^2.55.0",
     "whatwg-fetch": "~0.7.0"
   }
 }
