upgrade engines to node 8.x

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "iojs": ">=1.x"
+    "node": "8.x"
   },
   "author": "",
   "license": "MIT",
